--- a/pikasle_es.html
+++ b/pikasle_es.html
@@ -97,7 +97,7 @@ La revista $\pi kasle$ contó con el apoyo y financiación de la <a href="https:
 <hr><div id="numeros">
 <h1>Números</h1>
 <p style="text-align:justify;">
-De los 10 números digitales de $\pi kasle$, cuatro se publicarón en año cadémico 2011-12, tres en el año académico 2012-13 y tres en el año académico 2013-14. De los tres números impresos, dos se publicarón en el año académico 2012-13 y el restanto en el año académico 2013-14.
+De los 10 números digitales de $\pi kasle$, cuatro se publicaron en año académico 2011-12, tres en el año académico 2012-13 y tres en el año académico 2013-14. De los tres números impresos, dos se publicaron en el año académico 2012-13 y el resto en el año académico 2013-14.
 </p>
 
 <div class="row" style="padding-top:2em;">
@@ -189,11 +189,11 @@ La revista $\pi kasle$ estaba dirigida por el <em>Comité Editorial</em>, el cua
 </p>
 
 <p style="text-align:justify;">
-A la hora de producir cada número de $\pi kasle$, el Comité Editorial se reunía con el Comité Asesor y el Equipo de Colaboradores se reunen para decidir que artículos van en cada número y repartir tareas. Tras ello, las y los autores del número mandan sus artículos al Comité Editorial. Este edita y maqueta una primera versión del número, diseñando también la portada. Posteriormente, en un ciclo de revisión-correción, el Comité Editorial y Asesor ultiman el númeo que será finalmente publicado en la web.
+A la hora de producir cada número de $\pi kasle$, el Comité Editorial se reunía con el Comité Asesor y el Equipo de Colaboradores para decidir que artículos van en cada número y repartir tareas. Tras ello, las y los autores del número mandan sus artículos al Comité Editorial. Este edita y maqueta una primera versión del número, diseñando también la portada. Posteriormente, en un ciclo de revisión-corrección, el Comité Editorial y Asesor ultiman el número que será finalmente publicado en la web.
 </p>
 
 <p style="text-align:justify;">
-A continuación se listan las personas pertenecientes a cada uno de los grupos expuestos por ordnados, en primer lugar, por año de comienzo de actividad, y, en segundo lugar, por apellido. En el caso de los/as colaboradores/as esporádicos/as, el año indica el año de publicado de su artículo.
+A continuación se listan las personas pertenecientes a cada uno de los grupos expuestos por ordenados, en primer lugar, por año de comienzo de actividad, y, en segundo lugar, por apellido. En el caso de los/as colaboradores/as esporádicos/as, el año indica el año de publicado de su artículo.
 </p>
 
 <div class="row">
@@ -480,7 +480,7 @@ Este concurso literario consistía en escribir un relato de 37 palabras o menos 
 <h4 id="celebrationofmind"><em>$\pi$kasle's Martin Gardner Celebration of Mind</em></h4>
 
 <p style="text-align:justify;">
-La <a href="https://www.celebrationofmind.org/"><em>Martin Gardner Celebration of Mind</em></a> es un evento global anual, promovido por la <a href="https://www.gathering4gardner.org/">Fundación Gathering4Gardner</a>, en el que personas alrededor del mundo realizan actividades, generalmente abiertas al público, alrededor del cumpleaños de <a href="https://en.wikipedia.org/wiki/Martin_Gardner">Martin Gardner</a>, 21 de Octubre, para celebrar la figura del divulador de las matemáticas. Estas atividades se centran en explorar y disfrutar de puzles, juegos, magia y matemáticas.
+La <a href="https://www.celebrationofmind.org/"><em>Martin Gardner Celebration of Mind</em></a> es un evento global anual, promovido por la <a href="https://www.gathering4gardner.org/">Fundación Gathering4Gardner</a>, en el que personas alrededor del mundo realizan actividades, generalmente abiertas al público, alrededor del cumpleaños de <a href="https://en.wikipedia.org/wiki/Martin_Gardner">Martin Gardner</a>, 21 de Octubre, para celebrar la figura del divulgador de las matemáticas. Estas actividades se centran en explorar y disfrutar de puzles, juegos, magia y matemáticas.
 </p>
 <p style="text-align:justify;">
 $\pi kasle$ se unió a la <em>Celebration of Mind</em> de 2013, realizando el 23 de octubre un evento abierto a todas y todos los estudiantes interesados del Campus de Leioa de la Universidad del País Vasco. En este evento, varias y varios voluntarios distribuidos por mesas mostraban, de una forma interactiva, puzles, juegos, magia y curiosidades matemáticas a las personas asistentes. El evento tuvo una asistencia de alrededor un centenar de personas.
@@ -578,7 +578,7 @@ El evento fue organizado por Josué Tonelli-Cueto y fue realizado el siguiente e
 </div>
 
 <p style="text-align:justify;">
-Junto con el <em>$\pi$kasle's Martin Gardner Celebration of Mind</em>, se convocó el <em> Concurso de trabajos sobre Martin Gardner/Martin Gardner-i buruzko lanen lehiaketa</em> en el que podía participar cualquier persona con un trabajo, en cualquier formato, de Martin Gardner y en el que se ofecía de premio la autobiografía de Martin Gardner <em>Undiluted Hocus-Pocus: The Autobiography</em>. El jurado estuvo compuesto por Pedro Alegría, Nerea Diez, Ricardo Grande, Marta Macho-Stadler, Víctor Manero y Josué Tonelli-Cueto. Los ganadores del concurso fueron Adiran Garaizar y Nerea Arrarte quienes participaron con un flexicubo sobre Martin Gardner.
+Junto con el <em>$\pi$kasle's Martin Gardner Celebration of Mind</em>, se convocó el <em> Concurso de trabajos sobre Martin Gardner/Martin Gardner-i buruzko lanen lehiaketa</em> en el que podía participar cualquier persona con un trabajo, en cualquier formato, de Martin Gardner y en el que se ofrecía de premio la autobiografía de Martin Gardner <em>Undiluted Hocus-Pocus: The Autobiography</em>. El jurado estuvo compuesto por Pedro Alegría, Nerea Diez, Ricardo Grande, Marta Macho-Stadler, Víctor Manero y Josué Tonelli-Cueto. Los ganadores del concurso fueron Adiran Garaizar y Nerea Arrarte quienes participaron con un flexicubo sobre Martin Gardner.
 </p>
 
 <div class="row" style="padding-bottom:2em;">
@@ -589,7 +589,7 @@ Junto con el <em>$\pi$kasle's Martin Gardner Celebration of Mind</em>, se convoc
 <div class="col-md-7" style="text-align:center;">
 <img style="width:90%;" src="pikasle/g0.jpg" alt="Flexicube of Adiran Garaizar and Nerea Arrarte"/>
 <p style="margin:0;">
-Flexicubo expuesto en la Faacultad de Ciencia y Tecnología de la UPV/EHU
+Flexicubo expuesto en la Facultad de Ciencia y Tecnología de la UPV/EHU
 </p></div>
 </div>
 
@@ -610,7 +610,7 @@ Flexicubo expuesto en la Faacultad de Ciencia y Tecnología de la UPV/EHU
 <h4 id="workshopmagic">$\pi$kasle's <em>Mathematics, Magic and Mystery</em> Workshop</h4>
 
 <p style="text-align:justify;">
-Cada mes de abril tiene lugar el <a href="http://www.ams.org/mathstatmonth/msamhome"><em>Mathematics and Statistics Awareness Month</em></a> (Mes del Concienciación de las Matemáticas y la Estadística) promovido por las sociedades matemáticas americanas. Cada año se enfatiza un tema distinto y, en 2014, dicho tema fue <a href="http://www.mathaware.org/mam/2014/"><em>Mathematics, Magic, and Mistery</em></a> (Matemáticas, Magia y Misterio). Aprovechando esta ocasión, $\pi kasle$ decidió realizar un workshop sobre dicha temática en el que se enseñaran trucos de magia matemáticos.
+Cada mes de abril tiene lugar el <a href="http://www.ams.org/mathstatmonth/msamhome"><em>Mathematics and Statistics Awareness Month</em></a> (Mes del Concienciación de las Matemáticas y la Estadística) promovido por las sociedades matemáticas americanas. Cada año se enfatiza un tema distinto y, en 2014, dicho tema fue <a href="http://www.mathaware.org/mam/2014/"><em>Mathematics, Magic, and Mystery</em></a> (Matemáticas, Magia y Misterio). Aprovechando esta ocasión, $\pi kasle$ decidió realizar un workshop sobre dicha temática en el que se enseñaran trucos de magia matemáticos.
 </p>
 
 <p style="text-align:justify;">
@@ -649,7 +649,7 @@ La revista obtuvo dos premios en reconocimiento a sus logros:
 <li>
 2013 &ndash; <b>Mención de Honor en la modalidad &ldquo;Trabajos de Divulgación Científica. Medios de Comunicación&rdquo; de la <a href="http://anteriores.cienciaenaccion.org/es/2013/index-premiados.html"><em>XIV edición de Ciencia en Acción</em></a></b>. Otorgado en octubre de 2013 por el certamen de <em>Ciencia en Acción</em> por la labor divulgativa de la revista.
 </li><li>
-2012 &ndash; <b>Primer Premio en la Cateogría de <em>Ciencias</em> de los <a href="https://www.ehu.eus/es/web/ikasleak/iii-deialdia"><em>III Premios al alumnado que mejor ha difundido la imagen de la UPV/EHU</em></a></b>. Otorgado en noviembre de 2012 por la UPV/EHU en reconocimiento la promoción de la imagen de la universidad.
+2012 &ndash; <b>Primer Premio en la Categoría de <em>Ciencias</em> de los <a href="https://www.ehu.eus/es/web/ikasleak/iii-deialdia"><em>III Premios al alumnado que mejor ha difundido la imagen de la UPV/EHU</em></a></b>. Otorgado en noviembre de 2012 por la UPV/EHU en reconocimiento la promoción de la imagen de la universidad.
 </li>
 <ul>
 
@@ -677,19 +677,19 @@ Ricardo, Josué y Esther Domínguez,<br>entonces decana de la ZTF-FCT,<br>en la 
 <h1>Historia del primer año de $\pi$kasle</h1>
 
 <p style="text-align:justify;">
-A lo largo del año académico 2011-12, la idea de una revista de divulgación matemática hecha por el alumnado de matemáticas de la Universidad del País Vasco (UPV/EHU) empezó a tomar forma en las conversaciones de la profesora Marta Macho y Josué Tonelli Cueto. Sin embargo, la idea no comenzó ha materializarse hasta que en el verano de 2012 Josué llamó a Ricardo Grande para plantearle la idea. A partir de ahí, hubo una larga conversación via correo electrónico entre Marta, Josué y Ricardo en la que la idea de la revista fue tomando forma hasta convertirse en un proyecto concreto y realizable.
+A lo largo del año académico 2011-12, la idea de una revista de divulgación matemática hecha por el alumnado de matemáticas de la Universidad del País Vasco (UPV/EHU) empezó a tomar forma en las conversaciones de la profesora Marta Macho y Josué Tonelli Cueto. Sin embargo, la idea no comenzó a materializarse hasta que en el verano de 2012 Josué llamó a Ricardo Grande para plantearle la idea. A partir de ahí, hubo una larga conversación via correo electrónico entre Marta, Josué y Ricardo en la que la idea de la revista fue tomando forma hasta convertirse en un proyecto concreto y realizable.
 </p>
 <p style="text-align:justify;">
 A pesar de lo normal que pueda parecer esto, la situación fue atípica porque Ricardo y Josué no tenía una relación cercana en aquel momento y, en base a ello, Ricardo no esperaba que un conocido de clase con el que había hablado alguna vez, pero no le había dado su teléfono móvil, le llamará en mitad de agosto con una propuesta para crear una revista. Por supuesto, de esto tuvo la culpa Marta Macho que dio a Josué el número de Ricardo al considerar que ambos estudiantes debían ponerse en contacto para que el proyecto pudiera progresar.
 </p>
 <p style="text-align:justify;">
-Para traer el proyecto de la revista del mundo de las ideas al mundo real, Ricardo y Josué comenzaron una amplia campaña de captación entre las y los estudiantes de matemáticas de la UPV/EHU. La campaña de correos electrónicos culminó en una reunión presencial de Josué y Ricardo con las personas interesadas. En dicha reunión, aparte de Ricardo, Josué y Marta, estuvieron presentes Maitane Amor, Amaia Gil, Irune Gurrutxaga, Aitziber Ibañez, Irene Llana e Ixiar Leunda. Este conjunto de personas conformarían el equipo original de la revista que sacó el primer número de $\pi$kasle.
+Para traer el proyecto de la revista del mundo de las ideas al mundo real, Ricardo y Josué comenzaron una amplia campaña de captación entre las y los estudiantes de matemáticas de la UPV/EHU. La campaña de correos electrónicos culminó en una reunión presencial de Josué y Ricardo con las personas interesadas. En dicha reunión, aparte de Ricardo, Josué y Marta, estuvieron presentes Maitane Amor, Amaia Gil, Irune Gurrutxaga, Aitziber Ibañez, Irene Llana e Ixiar Leunda. Este conjunto de personas conformaría el equipo original de la revista que sacó el primer número de $\pi$kasle.
 </p>
 <p style="text-align:justify;">
-En esta reunión, además, se acordó elegir el nombre de la revista por votación. Tras muchas propuestas y una votación, salió elegido el nombre de &ldquo;$\pi$kasle&rdquo;, que combina el número &ldquo;$\pi$&rdquo; con &ldquo;ikasle&rdquo;, propuesto por Maitane. Este nombre ganó por una diferencia de votos aplastante respecto al resto de posibilidades, incluida la propuesta inicial de Josué &ldquo;$\mathbb{K}\vec{a}\Gamma e G\varnothing\mathbb{R}iz\mathcal{I}\mathbb{S}\tau\forall$&rdquo; (Kategorizista) o su broma de &ldquo;$\mathbb{R}$handia&rdquo; (por Ricardo Grande).
+En esta reunión, además, se acordó elegir el nombre de la revista por votación. Tras muchas propuestas y una votación, salió elegido el nombre de &ldquo;$\pi$kasle&rdquo;, que combina el número &ldquo;$\pi$&rdquo; con &ldquo;ikasle&rdquo;, propuesto por Maitane. Este nombre ganó por una diferencia de votos aplastante respecto al resto de posibilidades. <!-- incluida la propuesta inicial de Josué &ldquo;$\mathbb{K}\vec{a}\Gamma e G\varnothing\mathbb{R}iz\mathcal{I}\mathbb{S}\tau\forall$&rdquo; (Kategorizista) o su broma de &ldquo;$\mathbb{R}$handia&rdquo; (por Ricardo Grande).-->
 </p>
 <p style="text-align:justify;">
-Decidido el título, el recién formado equipo se puso a trabajar. Tras un mes de duro trabajo y coordinación, el primer número de $\pi kasle$ vio la luz. Este se publicó en formato digital en la en su recién creada página web. Además se consiguió contar con la colaboración de Txomin Zukalaregi a quien le pareció bien la idea de incluir información sobre su concurso de problemas &ldquo;Txominen Sariketa - El Concurso de Txomi&rdquo; al final de cada número.
+Tras un mes de duro trabajo y coordinación, el primer número de $\pi kasle$ vio la luz. Este se publicó en formato digital en la en su recién creada página web. Además se consiguió contar con la colaboración de Txomin Zukalaregi a quien le pareció bien la idea de incluir información sobre su concurso de problemas &ldquo;Txominen Sariketa - El Concurso de Txomi&rdquo; al final de cada número.
 </p>
 <p style="text-align:justify;">
 Este primer número tuvo una gran aceptación entre el alumnado y el público en general, obteniendo difusión en varios blogs de divulgación matemática. Con esto número, $\pi kasle$ era una revista real. Sin embargo, con la excepción del diseño del número y la sección &ldquo;Un paseo por la historia&rdquo de Aitziber e Irune, la forma del proyecto y la gente participando en él no había llegado aún a un estado estable.</p>
@@ -704,7 +704,7 @@ Por otro lado, algunas de las personas dejarían la revista en este proceso. Ent
 </p>
 
 <p style="text-align:justify;">
-De este modo, al llegar al final de su primer año, la revista $\pi kasle$ se había consolidado como proyecto y estaba preparada para crecer con la incorporación de las nuevas personas al proyecto: Jon Asier Bárcena, Álvaro Pardo, Imanol Pérez, Manuel Santos,  Anne Elorza y Antonio Gallastegui.
+De este modo, al llegar al final de su primer año, la revista $\pi kasle$ se había consolidado como proyecto y estaba preparada para crecer con la incorporación de las nuevas personas al proyecto: Jon Asier Bárcena, Álvaro Pardo, Imanol Pérez, Manuel Santos, Anne Elorza y Antonio Gallastegui.
 </p>
 
 <!-- Miscelanea
