--- a/pikasle_es.html
+++ b/pikasle_es.html
@@ -343,11 +343,11 @@ La mayoría de las artículos en esta sección son breves notas de prensa acerca
  <li><a href="pikasle/PIkasle06.pdf#page=6">A. Ibañez, <em>Vodka marca Mendeliev</em>, Revista $\pi kasle$ Aldizkaria <b>6</b> (2013), 6.</a></li>
  <li><a href="pikasle/PIkasle07.pdf#page=6">J.A. Bárcena, <em>Cursos on-line para estudiantes</em>, Revista $\pi kasle$ Aldizkaria <b>7</b> (2013), 6.</a></li>
  <li><a href="pikasle/PIkasle08.pdf#page=7">J. Tonelli-Cueto, <em>$\pi$kasle's Martin Gardner Celebration of Mind</em>, Revista $\pi kasle$ Aldizkaria <b>8</b> (2013), 7-9.</a></li>
- <li><a href="pikasle/PIkasle08.pdf#page=10">A. Gallastegui, <em>Estadistiko Jardunaldi bat</em>, Revista $\pi kasle$ Aldizkaria <b>8</b> (2013), 10.</a></li>
+ <li><a href="pikasle/PIkasle08.pdf#page=10">A. Gallastegui, <em>Estadistiko Jardunaldi bat (Euskera) [Una jornada estadística]</em>, Revista $\pi kasle$ Aldizkaria <b>8</b> (2013), 10.</a></li>
  <li><a href="pikasle/PIkasle08.pdf#page=11">A. Gallastegui, <em>Una Jornada de Estadística</em>, Revista $\pi kasle$ Aldizkaria <b>8</b> (2013), 11.</a></li>
  <li><a href="pikasle/PIkasle08.pdf#page=12">J.A. Bárcena, <em>La MM-ISSS, una experiencia inolvidable</em>, Revista $\pi kasle$ Aldizkaria <b>8</b> (2013), 12.</a></li>
  <li><a href="pikasle/PIkasle08.pdf#page=13">R. Grande, <em>Matemáticas en Aotearoa</em>, Revista $\pi kasle$ Aldizkaria <b>8</b> (2013), 13-15.</a></li>
- <li><a href="pikasle/PIkasle09.pdf#page=5">A. Gallastegui, <em>#Kultura Zientifikoa 1. Jaialdia</em>, Revista $\pi kasle$ Aldizkaria <b>9</b> (2014), 5.</a></li>
+ <li><a href="pikasle/PIkasle09.pdf#page=5">A. Gallastegui, <em>#Kultura Zientifikoa 1. Jaialdia (Euskera) [Primer festival de cultura científica]</em>, Revista $\pi kasle$ Aldizkaria <b>9</b> (2014), 5.</a></li>
  <li><a href="pikasle/PIkasle10.pdf#page=6">I. Llana, <em>The Imitation Game</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 6.</a></li>
 </ul>
 
@@ -362,9 +362,9 @@ En esta sección, a cargo de Víctor Manero, se describen diversas opciones para
  <li><a href="pikasle/PIkasle03.pdf#page=10">I. Barrio, J. Álvarez-Aramberri, <em>Al acabar la carrera, ¿qué? &ndash; Máster de Modelización Matemática, Estadística y Computación</em>, Revista $\pi kasle$ Aldizkaria <b>3</b> (2012), 10-11.</a></li>
  <li><a href="pikasle/PIkasle05.pdf#page=6">V. Manero, M. Mateos, <em>Al acabar la carrera, ¿qué? &ndash; Entrevista con Maider Mateos del Pino</em>, Revista $\pi kasle$ Aldizkaria <b>4</b> (2012), 6-7.</a></li>
  <li><a href="pikasle/PIkasle06.pdf#page=8">M. Morales, V. Manero, <em>Al acabar la carrera, ¿qué? &ndash; Entrevista a Mario Morales</em>, Revista $\pi kasle$ Aldizkaria <b>6</b> (2013), 8-9.</a></li>
- <li><a href="pikasle/PIkasle07.pdf#page=8">D. Girela, <em>Al acabar la carrera, ¿qué? [&ndash; Máster en Modelización para la Ciencia y la Ingeniería de la Universitat Autònoma de Barcelona]</em>, Revista $\pi kasle$ Aldizkaria <b>7</b> (2013), 8-9.</a></li>
+ <li><a href="pikasle/PIkasle07.pdf#page=8">D. Girela, <em>Al acabar la carrera, ¿qué? (&ndash; Máster en Modelización para la Ciencia y la Ingeniería de la Universitat Autònoma de Barcelona)</em>, Revista $\pi kasle$ Aldizkaria <b>7</b> (2013), 8-9.</a></li>
  <li><a href="pikasle/PIkasle08.pdf#page=17">F.W. Chaves Silva, V. Manero, <em>Al acabar la carrera, ¿qué? &ndash; Entrevista con Felipe W. Chaves Silva</em>, Revista $\pi kasle$ Aldizkaria <b>8</b> (2013), 17-18.</a></li>
- <li><a href="pikasle/PIkasle09.pdf#page=6">J. Doncel, <em>Al acabar la carrera, ¿qué? [&ndash; Redes de Telecomunicaciones]</em>, Revista $\pi kasle$ Aldizkaria <b>9</b> (2014), 6.</a></li>
+ <li><a href="pikasle/PIkasle09.pdf#page=6">J. Doncel, <em>Al acabar la carrera, ¿qué? (&ndash; Redes de Telecomunicaciones)</em>, Revista $\pi kasle$ Aldizkaria <b>9</b> (2014), 6.</a></li>
  <li><a href="pikasle/PIkasle10.pdf#page=6">S. Carreño, V. Manero, <em>Al acabar la carrera, ¿qué? &ndash; Entrevista a Sheila Carreño</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 6-7.</a></li>
 </ul>
 
@@ -388,15 +388,15 @@ Como indica el nombre, en esta sección, se realizaban entrevistas a diversas pe
 
 <ul style="list-style-type:none;">
  <li><a href="pikasle/PIkasle01.pdf#page=7">R. Grande, J. Tonelli-Cueto, <em>Entrevista a Raúl Ibañez</em>, Revista $\pi kasle$ Aldizkaria <b>1</b> (2011), 7-9.</a></li>
- <li><a href="pikasle/PIkasle02.pdf#page=8">A. Gil, I. Leunda, <em>Entrevista a Irati Murua</em>, Revista $\pi kasle$ Aldizkaria <b>2</b> (2011), 8-9.</a> En euskera.</li>
+ <li><a href="pikasle/PIkasle02.pdf#page=8">A. Gil, I. Leunda, <em>Entrevista a Irati Murua (Euskera)</em>, Revista $\pi kasle$ Aldizkaria <b>2</b> (2011), 8-9.</a></li>
  <li><a href="pikasle/PIkasle04.pdf#page=8">J. Tonelli-Cueto, <em>Charla con los organizadores del Año de Galois</em>, Revista $\pi kasle$ Aldizkaria <b>4</b> (2012), 8-11.</a></li>
  <li><a href="pikasle/PIkasle05.pdf#page=12">J. Tonelli-Cueto, R. Grande, <em>Entrevista a Carlos Beltrán y Luis Miguel Pardo</em>, Revista $\pi kasle$ Aldizkaria <b>5</b> (2012), 12-16.</a></li>
- <li><a href="pikasle/PIkasle06.pdf#page=10">R. Grande, J. Tonelli-Cueto, <em>Interview with David Cox</em>, Revista $\pi kasle$ Aldizkaria <b>6</b> (2013), 10-12.</a> En inglés.</li>
- <li><a href="pikasle/PIkasle06.pdf#page=13">R. Grande, J. Tonelli-Cueto, I. Llana (traducción), <em>David Cox-ekiko elkarrizketa</em>, Revista $\pi kasle$ Aldizkaria <b>6</b> (2013), 13-15.</a> En euskera.</li>
- <li><a href="pikasle/PIkasle07.pdf#page=10">J. Tonelli-Cueto, R. Grande, <em>Interview with Christiane Rousseau</em>, Revista $\pi kasle$ Aldizkaria <b>7</b> (2013), 10-11.</a> En inglés.</li>
+ <li><a href="pikasle/PIkasle06.pdf#page=10">R. Grande, J. Tonelli-Cueto, <em>Interview with David Cox (Inglés) [Entrevista con David Cox]</em>, Revista $\pi kasle$ Aldizkaria <b>6</b> (2013), 10-12.</a></li>
+ <li><a href="pikasle/PIkasle06.pdf#page=13">R. Grande, J. Tonelli-Cueto, I. Llana (traducción), <em>David Cox-ekiko elkarrizketa (Euskera) [Entrevista con David Cox]</em>, Revista $\pi kasle$ Aldizkaria <b>6</b> (2013), 13-15.</a></li>
+ <li><a href="pikasle/PIkasle07.pdf#page=10">J. Tonelli-Cueto, R. Grande, <em>Interview with Christiane Rousseau (Inglés) [Entrevista con Christiane Rousseau]</em>, Revista $\pi kasle$ Aldizkaria <b>7</b> (2013), 10-11.</a></li>
  <li><a href="pikasle/PIkasle08.pdf#page=19">J. Tonelli-Cueto, <em>Entrevista a Manuel de León</em>, Revista $\pi kasle$ Aldizkaria <b>8</b> (2013), 19-20.</a></li>
- <li><a href="pikasle/PIkasle09.pdf#page=8">R. Grande, J. Tonelli-Cueto, <em>Interview with Peter Neumann</em>, Revista $\pi kasle$ Aldizkaria <b>9</b> (2014), 8-10.</a> En inglés.</li>
- <li><a href="pikasle/PIkasle10.pdf#page=9">J. Tonelli-Cueto, R. Grande, <em>Interview with Ronald de Vore</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 9-13.</a> En inglés.</li>
+ <li><a href="pikasle/PIkasle09.pdf#page=8">R. Grande, J. Tonelli-Cueto, <em>Interview with Peter Neumann (Inglés) [Entrevista con Peter Neumann]</em>, Revista $\pi kasle$ Aldizkaria <b>9</b> (2014), 8-10.</a></li>
+ <li><a href="pikasle/PIkasle10.pdf#page=9">J. Tonelli-Cueto, R. Grande, <em>Interview with Ronald de Vore (Inglés) [Entrevista con Ronald de Vore]</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 9-13.</a></li>
 </ul>
 
 <h3>4.- <em>Matemáticas</em> y mutaciones de la sección</h3>
@@ -407,18 +407,18 @@ En esta sección y sus variantes, se tratan o bien las matemáticas o bien su re
 
 <ul style="list-style-type:none;">
  <li><a href="pikasle/PIkasle02.pdf#page=10">J. Tonelli-Cueto, <em>Moléculas en el espejo ...o cómo la topología se manifiesta en la química</em>, Revista $\pi kasle$ Aldizkaria <b>2</b> (2011), 10-13.</a></li>
- <li><a href="pikasle/PIkasle03.pdf#page=13">I. Gurrutxaga, <em>Urrezko Zenbakia</em>, Revista $\pi kasle$ Aldizkaria <b>3</b> (2012), 13-14.</a> En euskera.</li>
- <li><a href="pikasle/PIkasle04.pdf#page=12">J. Lázaro, <em>Maien matematika</em>, Revista $\pi kasle$ Aldizkaria <b>4</b> (2012), 12-14.</a> En euskera.</li>
- <li><a href="pikasle/PIkasle05.pdf#page=17">I. Etxarri, A. Elorduizapatarietxe, <em>Sudokua. Bideo-jokoak baino famatuagoa?</em>, Revista $\pi kasle$ Aldizkaria <b>5</b> (2012), 17-18.</a> En euskera.</li>
+ <li><a href="pikasle/PIkasle03.pdf#page=13">I. Gurrutxaga, <em>Urrezko Zenbakia (Euskera) [El número de oro]</em>, Revista $\pi kasle$ Aldizkaria <b>3</b> (2012), 13-14.</a></li>
+ <li><a href="pikasle/PIkasle04.pdf#page=12">J. Lázaro, <em>Maien matematika (Euskera) [La matemática de los mayas]</em>, Revista $\pi kasle$ Aldizkaria <b>4</b> (2012), 12-14.</a></li>
+ <li><a href="pikasle/PIkasle05.pdf#page=17">I. Etxarri, A. Elorduizapatarietxe, <em>Sudokua. Bideo-jokoak baino famatuagoa? (Euskera) [El sudoku, ¿más famoso que los videojuegos?]</em>, Revista $\pi kasle$ Aldizkaria <b>5</b> (2012), 17-18.</a></li>
  <li><a href="pikasle/PIkasle06.pdf#page=16">I. Pérez, <em>Erdös y los inversos de los números primos</em>, Revista $\pi kasle$ Aldizkaria <b>6</b> (2013), 16-17.</a></li>
  <li><a href="pikasle/PIkasle07.pdf#page=20">M. Santos, <em>Platonismo y matemáticas. Visión general, axiomas y objetos matemáticos</em>, Revista $\pi kasle$ Aldizkaria <b>6</b> (2013), 20-21.</a></li>
  <li><a href="pikasle/PIkasle07.pdf#page=12">I. Pérez, <em>La catenaria y el coseno hiperbólico</em>, Revista $\pi kasle$ Aldizkaria <b>7</b> (2013), 12.</a></li>
- <li><a href="pikasle/PIkasle07.pdf#page=15">A. Aresti, J. Escudero, <em>abraMATabra</em>, Revista $\pi kasle$ Aldizkaria <b>7</b> (2013), 15-17.</a> En euskera.</li>
- <li><a href="pikasle/PIkasle07.pdf#page=18">J. Uria, <em>Eboluzioa</em>, Revista $\pi kasle$ Aldizkaria <b>7</b> (2013), 18-19.</a> En euskera.</li>
- <li><a href="pikasle/PIkasle08.pdf#page=21">J. Iturrizaga, S. de Casas, <em>Matematika Zineman</em>, Revista $\pi kasle$ Aldizkaria <b>8</b> (2013), 21-23.</a> En euskera.</li>
+ <li><a href="pikasle/PIkasle07.pdf#page=15">A. Aresti, J. Escudero, <em>abraMATabra (Euskera)</em>, Revista $\pi kasle$ Aldizkaria <b>7</b> (2013), 15-17.</a></li>
+ <li><a href="pikasle/PIkasle07.pdf#page=18">J. Uria, <em>Eboluzioa (Euskera) [Evolución]</em>, Revista $\pi kasle$ Aldizkaria <b>7</b> (2013), 18-19.</a></li>
+ <li><a href="pikasle/PIkasle08.pdf#page=21">J. Iturrizaga, S. de Casas, <em>Matematika Zineman (Euskera) [Matemática en el cine]</em>, Revista $\pi kasle$ Aldizkaria <b>8</b> (2013), 21-23.</a></li>
  <li><a href="pikasle/PIkasle09.pdf#page=11">V. Manero, <em>¿Cómo calcular la distancia a las estrellas? El paralaje</em>, Revista $\pi kasle$ Aldizkaria <b>9</b> (2014), 11-12.</a></li>
- <li><a href="pikasle/PIkasle09.pdf#page=13">A. Holgado, N. Agirregoikoa, <em>Fantasiazko Eraikinak (I)</em>, Revista $\pi kasle$ Aldizkaria <b>9</b> (2014), 13-15.</a> En euskera.</li>
- <li><a href="pikasle/PIkasle10.pdf#page=14">A. Holgado, N. Agirregoikoa, <em>Fantasiazko Eraikinak (II)</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 14-16.</a> En euskera.</li>
+ <li><a href="pikasle/PIkasle09.pdf#page=13">A. Holgado, N. Agirregoikoa, <em>Fantasiazko Eraikinak (I) (Euskera) [Edificios de fantasía (I)]</em>, Revista $\pi kasle$ Aldizkaria <b>9</b> (2014), 13-15.</a></li>
+ <li><a href="pikasle/PIkasle10.pdf#page=14">A. Holgado, N. Agirregoikoa, <em>Fantasiazko Eraikinak (II) (Euskera) [Edificios de fantasía (II)]</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 14-16.</a></li>
  <li><a href="pikasle/PIkasle10.pdf#page=19">M. Santos, <em>Henri Poincaré: Matemático y filósofo</em>, Revista $\pi kasle$ Aldizkaria <b>10</b> (2014), 19-20.</a></li>
 </ul>
 
