--- a/cv_es.html
+++ b/cv_es.html
@@ -446,15 +446,18 @@
 <!-- 2019
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-
+<br><div class="cv">
+<div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#openingeinstein">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a><span style="float:right;"><!--<a href="pdf/felipefest2019_slides.pdf">Slides</a>--></span></h4></div>
+  <div class="pretalktitle"></div><div class="talktitle">What is the probabilistic analysis of a condition number?</div>
+</div>
 
 <br><div class="cv">
-<div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#felipefest">Complexity of Numerical Computation: A conference in honor of Felipe Cucker</a><span style="float:right;"><a href="pdf/felipefest2019_slides.pdf">Slides</a></span></h4></div>
+<div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#felipefest">Complexity of Numerical Computation: A conference in honor of Felipe Cucker</a><span style="float:right;"><a href="pdf/felipefest2019_slides.pdf">Transparencias</a></span></h4></div>
   <div class="pretalktitle"></div><div class="talktitle">Average minus Weak Complexity equals Adaptive algorithms</div>
 </div>
 
 <br><div class="cv">
-<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2019">44th International Symposium on Symbolic and Algebraic Computations (ISSAC 2019)</a><span style="float:right;"><a href="pdf/ISSAC19_slides.pdf">Slides</a></span></h4></div>
+<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2019">44th International Symposium on Symbolic and Algebraic Computations (ISSAC 2019)</a><span style="float:right;"><a href="pdf/ISSAC19_slides.pdf">Transparencias</a></span></h4></div>
   <div class="pretalktitle"></div><div class="talktitle">Transparencias</div>
 </div>
 
@@ -1056,11 +1059,22 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- To come
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+<span id="openingeinstein"></span>
+<br><div class="cv">
+<div class="year">
+<h4>2019</h4>
+</div><div class="title">
+<h4>&emsp;<a href="http://ehrhart.math.fu-berlin.de/agplus/conference.php">Opening Conference of the Thematic Einstein Semester on Algebraic Geometry</a></h4></div>
+  <div class="property">Organizador:</div><div class="value">Mario Kummer, Angela Ortega, Andrea Petracci and Karin Schaller</div>
+  <div class="property">Institución anfitriona:</div><div class="value"><a href="https://www.fu-berlin.de/">Freie Universit&auml;t Berlin</a></div>
+  <div class="property">Lugar:</div><div class="value">Berlin, Germany</div>
+  <div class="property">Fecha:</div><div class="value">7th to 11th of October of 2019</div>
+</div>
 
    <span id="felipefest"></span>
    <br><div class="cv">
    <div class="year">
-   <h4>2019</h4>
+   
    </div><div class="title">
    <h4>&emsp;<a href="https://felipesfest.github.io">Complexity of numerical computation: A conference in honor of Felipe Cucker</a></h4></div>
      <div class="property">Organizador:</div><div class="value">Peter B&uuml;rgisser, Teresa krick, Javier Pe&ntilde;a and Stephen Smale</div>
