--- a/cv_es.html
+++ b/cv_es.html
@@ -406,12 +406,6 @@
       </div>
 
       <br><div class="cv">
-      <div class="year"></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  Labor="button">arXiv:1901.09234</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_alperen_erguer/">Alperen A. Erg&uuml;r</a>)</div>
-       <div class="pretalktitle"></div><div class="collaborator">Accepted at <a href="#ISSAC2019">ISSAC2019</a></div>
-      </div>
-
-      <br><div class="cv">
       <div class="year"><h4>2018</h4></div><div class="paper"><h4>&emsp;On the Number of Real Zeros of Random Fewnomials
       <a class="btn btn-arxiv" href="https://arxiv.org/abs/1811.09425"  Labor="button">arXiv:1811.09425</a></h4></div>
        <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/prof_dr_peter_buergisser/">Peter B&uuml;rgisser</a> and <a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/dr_alperen_erguer/">Alperen A. Erg&uuml;r</a>)</div>
@@ -422,8 +416,13 @@
       </div></div>
 
       <br><div class="cv">
-      <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  Labor="button">arXiv:1807.06435</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker, J. Tonelli-Cueto; Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
+      <div class="year"><h4>2019</h4></div><div class="paper"><h4>&emsp;Plantinga-Vegter algorithm takes average polynomial time<a class="btn btn-arxiv" href="https://arxiv.org/abs/1901.09234"  role="button">arXiv:1901.09234</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">F. Cucker, A.A. Erg&uuml;r and J. Tonelli-Cueto. Plantinga-Vegter Algorithm takes Average Polynomial Time. In <i>Proceedings of the 2019 on International Symposium on Symbolic and Algebraic Computation</i>, <a href="#ISSAC2019">ISSAC'19</a>, pages 114-121. ACM, New York, 2019. <span><a href="https://doi.org/10.1145/3326229.3326252">DOI 10.1145/3326229.3326252</a></span></div>
+      </div>
+
+      <br><div class="cv">
+      <div class="year"></div><div class="paper"><h4>&emsp;Computing the Homology of Semialgebraic Sets I: Lax Formulas<a class="btn btn-arxiv" href="https://arxiv.org/abs/1807.06435"  role="button">arXiv:1807.06435</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">P. Bürgisser, F. Cucker, J. Tonelli-Cueto. Computing the Homology of Semialgebraic Sets. I: Lax Formulas, <i>Foundations of Computational Mathematics</i>, May 2019. <span><a href="https://doi.org/10.1007/s10208-019-09418-y">DOI 10.1007/s10208-019-09418-y</a></span></div>
       </div>
 
    </div>
@@ -1074,7 +1073,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <span id="felipefest"></span>
    <br><div class="cv">
    <div class="year">
-   
+
    </div><div class="title">
    <h4>&emsp;<a href="https://felipesfest.github.io">Complexity of numerical computation: A conference in honor of Felipe Cucker</a></h4></div>
      <div class="property">Organizador:</div><div class="value">Peter B&uuml;rgisser, Teresa krick, Javier Pe&ntilde;a and Stephen Smale</div>
