--- a/cv.html
+++ b/cv.html
@@ -448,7 +448,7 @@
 </div>
 
 <br><div class="cv">
-<div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#felipefest">Complexity of Numerical Computation: A conference in honor of Felipe Cucker</a><span style="float:right;"><a href="pdf/felipefest2019_slides.pdf">Slides</a></span></h4></div>
+<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#felipefest">Complexity of Numerical Computation: A conference in honor of Felipe Cucker</a><span style="float:right;"><a href="pdf/felipefest2019_slides.pdf">Slides</a></span></h4></div>
   <div class="pretalktitle"></div><div class="talktitle">Average minus Weak Complexity equals Adaptive algorithms</div>
 </div>
 
