--- a/research_es.html
+++ b/research_es.html
@@ -135,7 +135,7 @@
 </div>
 <hr>
 <div id="papers">
-  <h2 class="display-4">Artículos cient;ificos y preprints</h2>
+  <h2 class="display-4">Artículos científicos y preprints</h2>
   <p style="margin:0;">Los siguientes son mi artículos científicos y preprints en los últimos años. Para una lista completa, consultar <a href="cv.html#publications">la lista de mi CV</a> o <a href="arXiv.html">mi lista de preprints de arXiv</a>.</p>
   <br><div class="row"><div class="col-md-12">
     <br><div class="row"><div class="col-md-12">
