--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <link rel="icon" href="./imgs/logo.png"/>
     <meta name="google" content="notranslate" />
-    <meta http-equiv="Content-Language" content="es"/>
+    <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Josu&eacute; Tonelli-Cueto's Research</title>
     <meta name="description" content="Research interests and list of publications of Josué Tonelli-Cueto" />
