--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -80,7 +80,7 @@
 
 
 <div class="container" style="text-align:justify;">
-  <img id="portrait" src="imgs/josue_tonellicueto_aboutme.JPG" alt="Josué Tonelli-Cueto in fron a blackboard holding a piece of chalk" style="float:right;margin-left:1.2em;margin-bottom:1.5em;margin-top:1.5em;" width="40%"/>
+  <img id="portrait" src="imgs/josue_tonellicueto_aboutme.JPG" alt="Josué Tonelli-Cueto enfrente de la pizarra sosteniendo una tiza" style="float:right;margin-left:1.2em;margin-bottom:1.5em;margin-top:1.5em;" width="40%"/>
   <p>
     My nombre es Josué Tonelli Cueto. Sin embargo, el nombre que uso académicamente es Josué Tonelli-Cueto. El guión es para evitar confusiones en el contexto internacional, dado que en muchos países de tradición no hispana lo común es tener un solo apellido. De esta forma, está claro que ambas palabras forman parte de mis apellidos y que ninguna de ellas en un segundo nombre.
   </p>
