--- a/index.html
+++ b/index.html
@@ -99,16 +99,27 @@
         <h3><a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/josue_tonelli_cueto/">PhD Student at Technische Universit&auml;t Berlin</a></h3>
         <h3><a href="https://www.math-berlin.de/students/phase-ii-students">Phase II Student at Berlin Mathematical School</a></h3>
         </center>
-  <div class="row" align="center" style="padding-top:5vw;font-size:2vw;">
-    <div class="col">
-      <a class="btn btn-secondary" href="aboutme.html" role="button" style="width:80%;">About me</a><br><br>
-      <a class="btn btn-arxiv" href="arXiv.html" role="button" style="width:80%;"><i class="ai ai-arxiv-square"></i> my arXiv</a>
-    </div>
-    <div class="col">
-      <a class="btn btn-pikasle"  href="pikasle_en.html" role="button" style="width:80%;">$\pi kasle$</a><br><br>
-      <a class="btn btn-secondary" href="contact.html" role="button" style="width:80%;">Contact me</a>
-    </div>
-</div>
+        <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
+          <div class="col">
+            <a class="btn btn-phd" href="phdthesis.html" role="button" style="width:55%;">Doctoral thesis and defence</a>
+          </div>
+      </div>
+      <div class="row" align="center" style="padding-top:2vw;font-size:2vw;">
+          <div class="col">
+            <a class="btn btn-secondary" href="aboutme.html" role="button" style="width:80%;">About me</a>
+          </div>
+          <div class="col">
+            <a class="btn btn-pikasle"  href="pikasle_en.html" role="button" style="width:80%;">$\pi kasle$</a>
+          </div>
+      </div>
+      <div class="row" align="center" style="padding-top:2vw;font-size:2vw;">
+          <div class="col">
+             <a class="btn btn-arxiv" href="arXiv.html" role="button" style="width:80%;"><i class="ai ai-arxiv-square"></i> my arXiv</a>
+          </div>
+          <div class="col">
+             <a class="btn btn-secondary" href="contact.html" role="button" style="width:80%;">Contact me</a>
+          </div>
+       </div>
   </div>
  </div>
 </div>
